--- a/CSharp/ASP.NET/DojoSurvey/Views/Home/Index.cshtml
+++ b/CSharp/ASP.NET/DojoSurvey/Views/Home/Index.cshtml
@@ -10,12 +10,12 @@
     <div class="container border mt-5 p-3">
         <form action="/result" method="POST" class="form">
             <div class="form-group">
-                <label for="name">Your Name:</label>
-                <input type="text" name="name">
+                <label for="Name">Your Name:</label>
+                <input type="text" name="Name">
             </div>
             <div class="form-group">
-                <label for="location">Dojo Location:</label>
-                <select name="location">
+                <label for="Location">Dojo Location:</label>
+                <select name="Location">
                     <option value="Arlington">Arlington</option>
                     <option value="Bellevue">Bellevue</option>
                     <option value="Boise">Boise</option>
@@ -28,8 +28,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="favLang">Favorite Language:</label>
-                <select name="favLang">
+                <label for="FavLang">Favorite Language:</label>
+                <select name="FavLang">
                     <option value="C#">C#</option>
                     <option value="Python">Python</option>
                     <option value="JavaScript">JavaScript</option>
@@ -38,8 +38,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="comment">Comment (optional):</label>
-                <textarea name="comment" rows="3"></textarea>
+                <label for="Comment">Comment (optional):</label>
+                <textarea name="Comment" rows="3"></textarea>
             </div>
             <div class="text-right">
                 <button type="submit" class="btn btn-primary">Submit</button>
