--- a/CSharp/ASP.NET/FormSubmission/Views/Home/Index.cshtml
+++ b/CSharp/ASP.NET/FormSubmission/Views/Home/Index.cshtml
@@ -33,6 +33,13 @@
                 </div>
             </div>
             <div class="form-group">
+                <span asp-validation-for="BirthDate" class="text-danger"></span>
+                <div class="row">
+                    <label asp-for="BirthDate" class="col-4"></label>
+                    <input asp-for="BirthDate" class="col-8">
+                </div>
+            </div>
+            <div class="form-group">
                 <span asp-validation-for="EmailAddress" class="text-danger"></span>
                 <div class="row">
                     <label asp-for="EmailAddress" class="col-4"></label>
