--- a/CSharp/ASP.NET/DojoSurvey/Views/Home/Index.cshtml
+++ b/CSharp/ASP.NET/DojoSurvey/Views/Home/Index.cshtml
@@ -1,3 +1,5 @@
+@using DojoSurvey.Models
+@model Survey
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,38 +10,56 @@
 </head>
 <body>
     <div class="container border mt-5 p-3">
-        <form action="/result" method="POST" class="form">
+        <form class="form" asp-action="Result" asp-controller="Home" method="POST">
             <div class="form-group">
-                <label for="Name">Your Name:</label>
-                <input type="text" name="Name">
+                <span asp-validation-for="Name" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-4"><label asp-for="Name"></label></div>
+                    <div class="col-8"><input asp-for="Name"></div>
+                </div>
             </div>
             <div class="form-group">
-                <label for="Location">Dojo Location:</label>
-                <select name="Location">
-                    <option value="Arlington">Arlington</option>
-                    <option value="Bellevue">Bellevue</option>
-                    <option value="Boise">Boise</option>
-                    <option value="Chicago">Chicago</option>
-                    <option value="Dallas">Dallas</option>
-                    <option value="Los Angeles">Los Angeles</option>
-                    <option value="Oakland">Oakland</option>
-                    <option value="Orange County">Orange County</option>
-                    <option value="San Jose">San Jose</option>
-                </select>
+                <span asp-validation-for="Location" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-4"><label asp-for="Location"></label></div>
+                    <div class="col-8">
+                        <select asp-for="Location">
+                            <option value="Arlington">Arlington</option>
+                            <option value="Bellevue">Bellevue</option>
+                            <option value="Boise">Boise</option>
+                            <option value="Chicago">Chicago</option>
+                            <option value="Dallas">Dallas</option>
+                            <option value="Los Angeles">Los Angeles</option>
+                            <option value="Oakland">Oakland</option>
+                            <option value="Orange County">Orange County</option>
+                            <option value="San Jose">San Jose</option>
+                        </select>
+                    </div>
+                </div>
             </div>
             <div class="form-group">
-                <label for="FavLang">Favorite Language:</label>
-                <select name="FavLang">
-                    <option value="C#">C#</option>
-                    <option value="Python">Python</option>
-                    <option value="JavaScript">JavaScript</option>
-                    <option value="HTML">HTML</option>
-                    <option value="CSS">CSS</option>
-                </select>
+                <span asp-validation-for="FavLang" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-4"><label asp-for="FavLang"></label></div>
+                    <div class="col-8">
+                        <select asp-for="FavLang">
+                            <option value="C#">C#</option>
+                            <option value="Python">Python</option>
+                            <option value="JavaScript">JavaScript</option>
+                            <option value="HTML">HTML</option>
+                            <option value="CSS">CSS</option>
+                        </select>
+                    </div>
+                </div>
             </div>
             <div class="form-group">
-                <label for="Comment">Comment (optional):</label>
-                <textarea name="Comment" rows="3"></textarea>
+                <span asp-validation-for="Comment" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-4"><label asp-for="Comment"></label></div>
+                    <div class="col-8">
+                        <textarea asp-for="Comment" rows="3"></textarea>
+                    </div>
+                </div>
             </div>
             <div class="text-right">
                 <button type="submit" class="btn btn-primary">Submit</button>
